- removing Alert() and replacing calls with error LogItems - some work on adding colored hex view. It's kind of a mess a the moment.

--- a/src/ui/qt/resources/resources.qrc
+++ b/src/ui/qt/resources/resources.qrc
@@ -1,5 +1,6 @@
 <!DOCTYPE RCC><RCC version="1.0">
 <qresource>
+    <file>images/close.png</file>
     <file>images/file-32.png</file>
     <file>images/audio_file-32.png</file>
     <file>images/audio_wave-32.png</file>
@@ -9,5 +10,6 @@
     <file>images/piano-32.png</file>
     <file>images/treble_clef-32.png</file>
     <file>images/music_folder-32.png</file>
+    <file>qss/default.qss</file>
 </qresource>
 </RCC>
