--- a/src/ui/qt/resources/resources.qrc
+++ b/src/ui/qt/resources/resources.qrc
@@ -1,5 +1,9 @@
 <!DOCTYPE RCC><RCC version="1.0">
 <qresource>
+  <file>fonts/Ubuntu_Mono/UbuntuMono-Bold.ttf</file>
+  <file>fonts/Ubuntu_Mono/UbuntuMono-BoldItalic.ttf</file>
+  <file>fonts/Ubuntu_Mono/UbuntuMono-Italic.ttf</file>
+  <file>fonts/Ubuntu_Mono/UbuntuMono-Regular.ttf</file>
   <file>images/open_file.svg</file>
   <file>images/player_play.svg</file>
   <file>images/player_pause.svg</file>
