VGMTransQt: Update Icons

--- a/src/ui/qt/resources/resources.qrc
+++ b/src/ui/qt/resources/resources.qrc
@@ -11,7 +11,8 @@
   <file>images/player_next.svg</file>
   <file>images/player_prev.svg</file>
   <file>images/sequence.svg</file>
-  <file>images/wave.svg</file>
+  <file>images/sample-collection.svg</file>
+  <file>images/sample.svg</file>
   <file>images/file.svg</file>
   <file>images/collection.svg</file>
   <file>images/instrument-set.svg</file>
