--- a/src/ui/qt/resources/resources.qrc
+++ b/src/ui/qt/resources/resources.qrc
@@ -22,7 +22,7 @@
   <file>images/binary.svg</file>
   <file>images/rest.svg</file>
   <file>images/tempo.svg</file>
-  <file alias="legal/VGMTrans">../../../../LICENSE/LICENSE</file>
-  <file alias="legal/oki_adpcm_state">../../../../LICENSE/LICENSE_oki_adpcm_state</file>
+  <file alias="legal/VGMTrans">../../../../LICENSE</file>
+  <file alias="legal/oki_adpcm_state">../../../../licenses/LICENSE_oki_adpcm_state</file>
 </qresource>
 </RCC>
