--- a/src/ui/qt/resources/resources.qrc
+++ b/src/ui/qt/resources/resources.qrc
@@ -2,36 +2,36 @@
 <qresource>
   <file>vgmtrans.png</file>
   <file>fonts/Roboto_Mono/RobotoMono-VariableFont_wght.ttf</file>
-  <file>images/open_file.svg</file>
-  <file>images/player_play.svg</file>
-  <file>images/player_pause.svg</file>
-  <file>images/player_stop.svg</file>
-  <file>images/player_next.svg</file>
-  <file>images/player_prev.svg</file>
-  <file>images/sequence.svg</file>
-  <file>images/sample-collection.svg</file>
-  <file>images/sample.svg</file>
-  <file>images/file.svg</file>
-  <file>images/collection.svg</file>
-  <file>images/instrument-set.svg</file>
-  <file>images/instr.svg</file>
-  <file>images/note.svg</file>
-  <file>images/noteoff.svg</file>
-  <file>images/control.svg</file>
-  <file>images/track.svg</file>
-  <file>images/trackend.svg</file>
-  <file>images/binary.svg</file>
-  <file>images/rest.svg</file>
-  <file>images/tempo.svg</file>
-  <file>images/progchange.svg</file>
-  <file>images/loop.svg</file>
-  <file>images/loop-forever.svg</file>
-  <file>images/volume.svg</file>
-  <file>images/adsr.svg</file>
-  <file>images/pan.svg</file>
-  <file>images/repeat-begin.svg</file>
-  <file>images/repeat-end.svg</file>
-  <file>images/pitchbend.svg</file>
+  <file>icons/open_file.svg</file>
+  <file>icons/player_play.svg</file>
+  <file>icons/player_pause.svg</file>
+  <file>icons/player_stop.svg</file>
+  <file>icons/player_next.svg</file>
+  <file>icons/player_prev.svg</file>
+  <file>icons/sequence.svg</file>
+  <file>icons/sample-collection.svg</file>
+  <file>icons/sample.svg</file>
+  <file>icons/file.svg</file>
+  <file>icons/collection.svg</file>
+  <file>icons/instrument-set.svg</file>
+  <file>icons/instr.svg</file>
+  <file>icons/note.svg</file>
+  <file>icons/noteoff.svg</file>
+  <file>icons/control.svg</file>
+  <file>icons/track.svg</file>
+  <file>icons/trackend.svg</file>
+  <file>icons/binary.svg</file>
+  <file>icons/rest.svg</file>
+  <file>icons/tempo.svg</file>
+  <file>icons/progchange.svg</file>
+  <file>icons/loop.svg</file>
+  <file>icons/loop-forever.svg</file>
+  <file>icons/volume.svg</file>
+  <file>icons/adsr.svg</file>
+  <file>icons/pan.svg</file>
+  <file>icons/repeat-begin.svg</file>
+  <file>icons/repeat-end.svg</file>
+  <file>icons/pitchbend.svg</file>
   <file alias="legal/VGMTrans">../../../../LICENSE</file>
   <file alias="legal/oki_adpcm_state">../../../../licenses/LICENSE_oki_adpcm_state</file>
 </qresource>
