--- a/src/ui/qt/resources/resources.qrc
+++ b/src/ui/qt/resources/resources.qrc
@@ -13,6 +13,7 @@
   <file>icons/sample.svg</file>
   <file>icons/file.svg</file>
   <file>icons/collection.svg</file>
+  <file>icons/hexview.svg</file>
   <file>icons/instrument-set.svg</file>
   <file>icons/instr.svg</file>
   <file>icons/note.svg</file>
